<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_transformer</name>
  <version>0.0.0</version>
  <description>Transforms PointCloud2 data for Isaac Sim</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
